Google Fonts Inclusion

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
 	<title>Train Scheduler</title>
 	<meta charset="utf-8">
-	<meta >
 
 <!-- Stylesheet LINKS: -->
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css"><!--  Link to the local reset stylesheet page -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"><!--  Link to Bootstrap Stylesheet Lib -->
+	
+	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet"> <!--  Link to GoogleFonts' Stylesheet Lib -->
 
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css"> <!-- Link to the local stylesheet page -->
 
@@ -23,7 +24,7 @@
 
 <body>
 <!-- HEADER: -->
-<div class="container">
+<div class="container-fluid">
 	<div id="mainHeader" class="container">
 		<div class="header">
 			<div class="page-header jumbotron">
