html updates and css main content

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- DYNAMICALLY MODIFIED TEXT BLOCK -->
 	<div class="row">
 
-		<div class="col-md-12">
+		<div class="col-md-10 col-md-offset-1">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
 					<div class="panel-title">Current Train Schedule</div>
@@ -83,7 +83,7 @@
 
 <!-- INPUT ADD-IN TEXT BLOCK -->
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-md-10 col-md-offset-1">
 			
 			<div class="panel panel-primary">
 				<div class="panel-heading">
@@ -107,7 +107,9 @@
 							<label for="frequency-input">Frequency (Min) </label>
 							<input type="text" class="form-control">
 						</div>
-						<button id="addTrainButton" class="btn btn-info" type="submit">Submit</button>
+						<div class="text-center">
+							<button id="addTrainButton" class="btn btn-lg" type="submit">Submit</button>							
+						</div>
 					</form>
 				</div>
 			</div>
