--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script> <!-- Link to Moments (for time Calculation) Script -->
 
 <!-- Script LINKS (PSEUDO BACKEND/ DATA-STORAGE: -->
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script><!--  Link to Firebase Script >> !!!!FOR DATA STORAGE!!!! -->
+    <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script><!--  Link to Firebase Script >> !!!!FOR DATA STORAGE!!!! -->
 </head>
 
 <body>
