--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- Script LINKS (CDNs): -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> <!--  Link to jQuery Script -->
-	
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> <!-- Link to the Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script> <!-- Link to Moments (for time Calculation) Script -->
 
@@ -58,11 +58,11 @@
 						<tbody> <!-- //blocprovides text to reference for dynamic creation/updating -->
 							<tr>
 								<td id="num"></td>
-								<td id="name">Example</td>
-								<td id="dest">Example</td>
-								<td id="freq">Example</td>
-								<td id="firstTrn">Example</td>
-								<td id="nextTrn">Example</td>
+								<td id="name"> </td>
+								<td id="dest"> </td>
+								<td id="freq"> </td>
+								<td id="firstTrn"> </td>
+								<td id="nextTrn"> </td>
 							</tr>
 						</tbody>				
 					</table>			
