firebase and button updates

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 			<div class="page-header jumbotron">
 				<h1 class="text-center">Anytime is Train Time</h1>
 				<h3 class="text-center">Choo CHOOOO!</h3>
-				<div id="jumboHeader"></div>
+				<br/>
+				<div>
+					<p id="jumboHeader"></p>
+				</div>
 			</div>
 		</div>
 	</div>
